# franka_project_base

./: .gitignore  CMakeLists.txt  README.md  libfranka.sh  rt.sh  test  test.py  venv.sh
cmake/: FrankaTargets.cmake
include/: franka_util.hpp
libfranka/: libfranka.so.0.7
src/: CMakeLists.txt  MotionGenerator.cpp  franka_util.cpp  franka_util.i
